--- a/style.css
+++ b/style.css
@@ -1,155 +1,363 @@
 #project-link:visited {
-  color: #00dddd;
+    color: #00dddd;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  background-color: #212121;
-  color: rgb(187, 168, 135);
-  font-size: large;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #212121;
+    color: rgb(187, 168, 135);
+    font-size: large;
 }
 
 .main {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
 }
 
 .storyText {
-  width: min(90%, 80ch);
-  --offsetx: 8px;
-  --offsety: 8px;
-  --blur-rad: 5px;
-  --spread: -2px;
-  margin-bottom: 15px;
-  background-color: #333;
-  box-shadow: var(--offsetx) var(--offsety) var(--blur-rad) var(--spread) rgba(0, 0, 0, 0.39);
-  padding: 5%;
-  border-radius: 7px;
+    width: min(90%, 80ch);
+    --offsetx: 8px;
+    --offsety: 8px;
+    --blur-rad: 5px;
+    --spread: -2px;
+    margin-bottom: 15px;
+    background-color: #333;
+    box-shadow: var(--offsetx) var(--offsety) var(--blur-rad) var(--spread) rgba(0, 0, 0, 0.39);
+    padding: 5%;
+    border-radius: 7px;
 }
 
 .text:hover {
-  background-color: rgba(83, 83, 83, 0.25);
-  border-radius: 5px;
-  border-width: 10px;
-  border-color: red;
-  color: hsl(38, 27.7, 80);
+    background-color: rgba(83, 83, 83, 0.25);
+    border-radius: 5px;
+    border-width: 10px;
+    border-color: red;
+    color: hsl(38, 27.7, 80);
 }
 
 /* New styles for the navigation bar */
 .navbar {
-  background-color: #333;
-  overflow: hidden;
-  position: sticky;
-  top: 0;
-  width: 100%;
-  margin-bottom: 15px;
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    background-color: #333;
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    margin-bottom: 15px;
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .navbar a {
-  float: left;
-  display: block;
-  color: rgb(187, 168, 135);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+    float: left;
+    display: block;
+    color: rgb(187, 168, 135);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
 .navbar a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 
 /* styles.css */
 pre {
-  --sb-track-color: #2a3133;
-  --sb-thumb-color: #49494a;
-  --sb-size: 4px;
+    --sb-track-color: #2a3133;
+    --sb-thumb-color: #49494a;
+    --sb-size: 4px;
 
-  background-color: #131313;
-  color: #f8f8f2;
-  padding: 16px;
-  border-radius: 8px;
-  overflow-x: scroll;
-  font-family: "Fira Code", monospace;
-  border-width: 2px;
-  border-color: #ddd;
+    background-color: #131313;
+    color: #f8f8f2;
+    padding: 16px;
+    border-radius: 8px;
+    overflow-x: scroll;
+    font-family: "Fira Code", monospace;
+    border-width: 2px;
+    border-color: #ddd;
 }
 
 pre::-webkit-scrollbar {
-  width: var(--sb-size);
+    width: var(--sb-size);
 }
 
 pre::-webkit-scrollbar-track {
-  background: var(--sb-track-color);
-  border-radius: 2px;
+    background: var(--sb-track-color);
+    border-radius: 2px;
 }
 
 pre::-webkit-scrollbar-thumb {
-  background: var(--sb-thumb-color);
-  border-radius: 2px;
+    background: var(--sb-thumb-color);
+    border-radius: 2px;
 }
 
 @supports not selector(::-webkit-scrollbar) {
-  pre {
-    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
-  }
+    pre {
+        scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    }
 }
 
 code {
-  font-size: 14px;
-  display: block;
+    font-size: 14px;
+    display: block;
 }
 
 /* Syntax highlighting */
 .token.string {
-  color: #f1fa8c;
+    color: #f1fa8c;
 }
 
 .token.builtin {
-  color: #8be9fd;
+    color: #8be9fd;
 }
 
 .token.operator,
 .token.punctuation {
-  color: #ff79c6;
+    color: #ff79c6;
 }
 
 .token.keyword {
-  color: #ff79c6;
+    color: #ff79c6;
 }
 
 .token.number {
-  color: #bd93f9;
+    color: #bd93f9;
 }
 
 .token.comment {
-  color: #6272a4;
+    color: #6272a4;
 }
 
 /* Add additional styles for language specific elements */
 .token.function {
-  color: #50fa7b;
+    color: #50fa7b;
 }
 
 .token.variable {
-  color: #f8f8f2;
+    color: #f8f8f2;
 }
 
 .token.class-name {
-  color: #ffb86c;
+    color: #ffb86c;
 }
 
 .token.selector {
-  color: #8be9fd;
+    color: #8be9fd;
 }
 
 .token.tag {
-  color: #ff79c6;
+    color: #ff79c6;
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 0.27861;
+    }
+
+    5% {
+        opacity: 0.34769;
+    }
+
+    10% {
+        opacity: 0.23604;
+    }
+
+    15% {
+        opacity: 0.90626;
+    }
+
+    20% {
+        opacity: 0.18128;
+    }
+
+    25% {
+        opacity: 0.83891;
+    }
+
+    30% {
+        opacity: 0.65583;
+    }
+
+    35% {
+        opacity: 0.67807;
+    }
+
+    40% {
+        opacity: 0.26559;
+    }
+
+    45% {
+        opacity: 0.84693;
+    }
+
+    50% {
+        opacity: 0.96019;
+    }
+
+    55% {
+        opacity: 0.08594;
+    }
+
+    60% {
+        opacity: 0.20313;
+    }
+
+    65% {
+        opacity: 0.71988;
+    }
+
+    70% {
+        opacity: 0.53455;
+    }
+
+    75% {
+        opacity: 0.37288;
+    }
+
+    80% {
+        opacity: 0.71428;
+    }
+
+    85% {
+        opacity: 0.70419;
+    }
+
+    90% {
+        opacity: 0.7003;
+    }
+
+    95% {
+        opacity: 0.36108;
+    }
+
+    100% {
+        opacity: 0.24387;
+    }
+}
+
+@keyframes chromaticAberration {
+    0% {
+        text-shadow: 0.4389924193300864px 0 1px rgba(0, 30, 255, 0.5), -0.4389924193300864px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    5% {
+        text-shadow: 2.7928974010788217px 0 1px rgba(0, 30, 255, 0.5), -2.7928974010788217px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    10% {
+        text-shadow: 0.02956275843481219px 0 1px rgba(0, 30, 255, 0.5), -0.02956275843481219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    15% {
+        text-shadow: 0.40218538552878136px 0 1px rgba(0, 30, 255, 0.5), -0.40218538552878136px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    20% {
+        text-shadow: 3.4794037899852017px 0 1px rgba(0, 30, 255, 0.5), -3.4794037899852017px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    25% {
+        text-shadow: 1.6125630401149584px 0 1px rgba(0, 30, 255, 0.5), -1.6125630401149584px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    30% {
+        text-shadow: 0.7015590085143956px 0 1px rgba(0, 30, 255, 0.5), -0.7015590085143956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    35% {
+        text-shadow: 3.896914047650351px 0 1px rgba(0, 30, 255, 0.5), -3.896914047650351px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    40% {
+        text-shadow: 3.870905614848819px 0 1px rgba(0, 30, 255, 0.5), -3.870905614848819px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    45% {
+        text-shadow: 2.231056963361899px 0 1px rgba(0, 30, 255, 0.5), -2.231056963361899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    50% {
+        text-shadow: 0.08084290417898504px 0 1px rgba(0, 30, 255, 0.5), -0.08084290417898504px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    55% {
+        text-shadow: 2.3758461067427543px 0 1px rgba(0, 30, 255, 0.5), -2.3758461067427543px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    60% {
+        text-shadow: 2.202193051050636px 0 1px rgba(0, 30, 255, 0.5), -2.202193051050636px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    65% {
+        text-shadow: 2.8638780614874975px 0 1px rgba(0, 30, 255, 0.5), -2.8638780614874975px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    70% {
+        text-shadow: 0.48874025155497314px 0 1px rgba(0, 30, 255, 0.5), -0.48874025155497314px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    75% {
+        text-shadow: 1.8948491305757957px 0 1px rgba(0, 30, 255, 0.5), -1.8948491305757957px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    80% {
+        text-shadow: 0.0833037308038857px 0 1px rgba(0, 30, 255, 0.5), -0.0833037308038857px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    85% {
+        text-shadow: 0.09769827255241735px 0 1px rgba(0, 30, 255, 0.5), -0.09769827255241735px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    90% {
+        text-shadow: 3.443339761481782px 0 1px rgba(0, 30, 255, 0.5), -3.443339761481782px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    95% {
+        text-shadow: 2.1841838852799786px 0 1px rgba(0, 30, 255, 0.5), -2.1841838852799786px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+
+    100% {
+        text-shadow: 2.6208764473832513px 0 1px rgba(0, 30, 255, 0.5), -2.6208764473832513px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+    }
+}
+
+.crt::after {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(18, 16, 16, 0.1);
+    opacity: 0;
+    z-index: 2;
+    pointer-events: none;
+    animation: flicker 0.15s infinite;
+}
+
+.crt::before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+    z-index: 2;
+    background-size: 100% 2px, 3px 100%;
+    pointer-events: none;
+}
+
+.crt {
+    font-family: 'Courier New', Courier, monospace;
+    color: rgba(0, 255, 0, 0.6);
+    background-color: #000;
+    animation: chromaticAberration 1.6s infinite;
 }
