--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ code {
 .crt::after {
     content: " ";
     display: block;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;
@@ -344,7 +344,7 @@ code {
 .crt::before {
     content: " ";
     display: block;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;
